--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -50,15 +50,15 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn17" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManualFeeTypes.invoke()">
-                            <wm-layoutgrid height="100%" name="layoutgrid7">
-                                <wm-gridrow height="100%" name="gridrow11_1">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn26_1" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-attach-money"></wm-icon>
+                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile7">
+                            <wm-layoutgrid height="100%" name="layoutgrid8">
+                                <wm-gridrow height="100%" name="gridrow11_2">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" class="col-xs-3" name="gridcolumn24_2">
+                                        <wm-icon iconsize="3em" iconclass="wi wi-assignment" name="icon7"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn27" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Manual Fees" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.ManualFeeTypeCountForMunicipality.firstRecord.count" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="1.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn25_2">
+                                        <wm-label caption="Manage Inspections" class="p" fontsize="1.5" fontunit="em" name="label13"></wm-label>
+                                        <wm-label caption="00" fontsize="3" fontunit="em" class="p" name="label14"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -73,7 +73,7 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn23" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-view-list"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn24" class="col-xs-9">
+                                    <wm-gridcolumn columnwidth="9" padding="1.5em unset unset unset" horizontalalign="center" name="gridcolumn24" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="GIS Maintenance" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.SubDivisonCount.dataSet[$i].SubDivisonCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -96,6 +96,23 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManualFeeTypes.invoke()">
+                            <wm-layoutgrid height="100%" name="layoutgrid7">
+                                <wm-gridrow height="100%" name="gridrow11_1">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn26_1" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-attach-money"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn27" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Manual Fees" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.ManualFeeTypeCountForMunicipality.firstRecord.count" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow10_2">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn21" padding="2em unset" horizontalalign="center">
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_MunicipalitySettings.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid5">
                                 <wm-gridrow height="100%" name="gridrow9_1">
@@ -109,6 +126,8 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn22"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn23_2"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
