Inspections- InspectionDesign Table New files added - [Inspections.java,InspectionsController.java,InspectionsServiceImpl.java,ManageInspections.html,InspectionsService.java,ManageInspections.css,ManageInspections.js,ManageInspections.variables.json,InspectionsDao.java,ManageInspections] Files modified - [pages-config.json,cx2_published_dataModel.json,servicedef.xml,TestRichTextController.java,TestRichText.java,MunicipalityAdministration.html,MunicipalitiesController.java,Municipalities.java,MunicipalitiesServiceImpl.java,MunicipalitiesService.java,app.variables.json,db-connection-settings.json]

--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -50,7 +50,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn17" horizontalalign="center" padding="2em unset">
-                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile7">
+                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile7" on-click="Variables.goToPage_ManageInspections.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid8">
                                 <wm-gridrow height="100%" name="gridrow11_2">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" class="col-xs-3" name="gridcolumn24_2">
