Manage Roles Changes Files modified - [ManageRoles.variables.json,ManageRoles.js,ManageRoles.html]

--- a/src/main/webapp/pages/ManageRoles/ManageRoles.html
+++ b/src/main/webapp/pages/ManageRoles/ManageRoles.html
@@ -14,8 +14,138 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
                         <wm-panel iconclass="wi wi-account-circle" autoclose="outsideClick" name="panel1" title="All CX Roles" class="panel-primary">
                             <wm-tabs name="tabs1">
-                                <wm-tabpane name="tabpane1" title="Municipality Roles"></wm-tabpane>
-                                <wm-tabpane name="tabpane2" title="Company Roles"></wm-tabpane>
+                                <wm-tabpane name="tabpane1" title="Municipality Roles">
+                                    <wm-layoutgrid name="layoutgrid3">
+                                        <wm-gridrow name="gridrow7">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn7" padding="1em unset">
+                                                <wm-composite name="composite1">
+                                                    <wm-label class="col-md-3 control-label" name="label1" caption="Select Role"></wm-label>
+                                                    <wm-container class="col-md-9" name="container1">
+                                                        <wm-select name="SelectMunicipalityRole" dataset="MunicipalityAdmin,MunicipalityEmployee" datavalue="MunicipalityEmployee"></wm-select>
+                                                    </wm-container>
+                                                </wm-composite>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn8"></wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow8">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn9">
+                                                <wm-livegrid formlayout="dialog" name="livegridMunicipalityRoles">
+                                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.MuncipalityRolesData.dataSet" navigation="Classic" name="gridMunicipalityRoles">
+                                                        <wm-grid-column binding="roleName" caption="Role Name" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                                        <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Municipalities"></wm-grid-column>
+                                                        <wm-grid-column-group name="group" caption="User">
+                                                            <wm-grid-column binding="users.firstName" caption="First Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                                            <wm-grid-column binding="users.lastName" caption="Last Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                                            <wm-grid-column binding="users.email" caption="Users Email" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                                        </wm-grid-column-group>
+                                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                        <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                                    </wm-grid>
+                                                    <wm-liveform novalidate="false" errormessage="" title="Add Role" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.MuncipalityRolesData.dataSet" captionalign="left" captionposition="top"
+                                                    name="liveformMunicipalityRoles">
+                                                        <wm-layoutgrid columns="1" name="layoutgrid2">
+                                                            <wm-gridrow name="gridrow3">
+                                                                <wm-gridcolumn columnwidth="12" name="gridcolumn3_1">
+                                                                    <wm-form-field name="roleName" displayname="Role Name" show="true" primary-key="false" generator="assigned" key="roleName" type="string" widget="select" maxchars="255" inputtype="text" placeholder="Enter value"
+                                                                    dataset="MunicipalityEmployee,MunicipalityAdmin,CXAdmin" defaultvalue="MunicipalityEmployee"></wm-form-field>
+                                                                </wm-gridcolumn>
+                                                            </wm-gridrow>
+                                                            <wm-gridrow name="gridrow4">
+                                                                <wm-gridcolumn columnwidth="12" name="gridcolumn4">
+                                                                    <wm-form-field name="description" displayname="Description" show="true" primary-key="false" generator="assigned" key="description" type="string" widget="text" maxchars="255" inputtype="text"
+                                                                    placeholder="Enter value"></wm-form-field>
+                                                                </wm-gridcolumn>
+                                                            </wm-gridrow>
+                                                            <wm-gridrow name="gridrow5">
+                                                                <wm-gridcolumn columnwidth="12" name="gridcolumn5">
+                                                                    <wm-form-field name="municipalities" displayname="Municipalities" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" widget="select" placeholder="Select value"
+                                                                    displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
+                                                                </wm-gridcolumn>
+                                                            </wm-gridrow>
+                                                            <wm-gridrow name="gridrow6">
+                                                                <wm-gridcolumn columnwidth="12" name="gridcolumn6">
+                                                                    <wm-form-field name="users" displayname="Users" show="true" primary-key="false" generator="assigned" key="users" type="list" is-related="true" widget="autocomplete" placeholder="Select value"
+                                                                    searchkey="firstName,lastName,email" displaylabel="email"></wm-form-field>
+                                                                </wm-gridcolumn>
+                                                            </wm-gridrow>
+                                                        </wm-layoutgrid>
+                                                        <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number"></wm-form-field>
+                                                        <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button"
+                                                        update-mode="true"></wm-form-action>
+                                                        <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                                    </wm-liveform>
+                                                </wm-livegrid>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                </wm-tabpane>
+                                <wm-tabpane name="tabpane2" title="Company Roles">
+                                    <wm-layoutgrid name="layoutgrid3">
+                                        <wm-gridrow name="gridrow7">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn7" padding="1em unset">
+                                                <wm-composite name="composite1">
+                                                    <wm-label class="col-md-3 control-label" name="label1" caption="Select Role"></wm-label>
+                                                    <wm-container class="col-md-9" name="container1">
+                                                        <wm-select name="SelectCompanyRole" dataset="MunicipalityAdmin,MunicipalityEmployee" datavalue="MunicipalityEmployee"></wm-select>
+                                                    </wm-container>
+                                                </wm-composite>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn8"></wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow8">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn9">
+                                                <wm-livegrid formlayout="dialog" name="livegridMunicipalityRoles">
+                                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.MuncipalityRolesData.dataSet" navigation="Classic" name="gridMunicipalityRoles">
+                                                        <wm-grid-column binding="roleName" caption="Role Name" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                                        <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Municipalities"></wm-grid-column>
+                                                        <wm-grid-column-group name="group" caption="User">
+                                                            <wm-grid-column binding="users.firstName" caption="First Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                                            <wm-grid-column binding="users.lastName" caption="Last Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                                            <wm-grid-column binding="users.email" caption="Users Email" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                                        </wm-grid-column-group>
+                                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                        <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                                    </wm-grid>
+                                                    <wm-liveform novalidate="false" errormessage="" title="Add Role" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.MuncipalityRolesData.dataSet" captionalign="left" captionposition="top"
+                                                    name="liveformMunicipalityRoles">
+                                                        <wm-layoutgrid columns="1" name="layoutgrid2">
+                                                            <wm-gridrow name="gridrow3">
+                                                                <wm-gridcolumn columnwidth="12" name="gridcolumn3_1">
+                                                                    <wm-form-field name="roleName" displayname="Role Name" show="true" primary-key="false" generator="assigned" key="roleName" type="string" widget="select" maxchars="255" inputtype="text" placeholder="Enter value"
+                                                                    dataset="MunicipalityEmployee,MunicipalityAdmin,CXAdmin" defaultvalue="MunicipalityEmployee"></wm-form-field>
+                                                                </wm-gridcolumn>
+                                                            </wm-gridrow>
+                                                            <wm-gridrow name="gridrow4">
+                                                                <wm-gridcolumn columnwidth="12" name="gridcolumn4">
+                                                                    <wm-form-field name="description" displayname="Description" show="true" primary-key="false" generator="assigned" key="description" type="string" widget="text" maxchars="255" inputtype="text"
+                                                                    placeholder="Enter value"></wm-form-field>
+                                                                </wm-gridcolumn>
+                                                            </wm-gridrow>
+                                                            <wm-gridrow name="gridrow5">
+                                                                <wm-gridcolumn columnwidth="12" name="gridcolumn5">
+                                                                    <wm-form-field name="municipalities" displayname="Municipalities" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" widget="select" placeholder="Select value"
+                                                                    displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
+                                                                </wm-gridcolumn>
+                                                            </wm-gridrow>
+                                                            <wm-gridrow name="gridrow6">
+                                                                <wm-gridcolumn columnwidth="12" name="gridcolumn6">
+                                                                    <wm-form-field name="users" displayname="Users" show="true" primary-key="false" generator="assigned" key="users" type="list" is-related="true" widget="autocomplete" placeholder="Select value"
+                                                                    searchkey="firstName,lastName,email" displaylabel="email"></wm-form-field>
+                                                                </wm-gridcolumn>
+                                                            </wm-gridrow>
+                                                        </wm-layoutgrid>
+                                                        <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number"></wm-form-field>
+                                                        <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button"
+                                                        update-mode="true"></wm-form-action>
+                                                        <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                                    </wm-liveform>
+                                                </wm-livegrid>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                </wm-tabpane>
                                 <wm-tabpane name="tabpane3" title="CX Admin"></wm-tabpane>
                             </wm-tabs>
                         </wm-panel>
