Added "Agent" as GIS Contact option. Updated grids to remove "id" fields, removed First/Last name fields and replaced with Fullname, added sort criteria to grids. Did a little shaping to the content on Global Settings. Files modified - [MunicipalityUsers.html,EditGISRecord.html,CompanyUsers.variables.json,CompanyUsers.html,MunicipalityUsers.variables.json,pages-config.json,ManageCompanies.html,ManageUsers.html,ManageMunicipalities.html,MyProfile.variables.json,ManageCompanies.variables.json,ManageMunicipalities.variables.json,ManageSubscriptions.variables.json,CXGlobalSettings.html,ManageUsers.variables.json,ManageSubscriptions.html]

--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -118,7 +118,7 @@
                                         <wm-gridrow name="gridrow12">
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn26">
                                                 <wm-form-field name="contactType" displayname="Contact Type" show="true" primary-key="false" generator="assigned" key="contactType" type="string" required="required" widget="select" maxchars="255" placeholder="Select value"
-                                                dataset="Owner,Tenant,Emergency,Tax Contact,Other" datafield="contactType" displayfield="contactType"></wm-form-field>
+                                                dataset="Owner,Tenant,Emergency,Tax Contact,Agent,Other" datafield="contactType" displayfield="contactType"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn27">
                                                 <wm-form-field name="firstName" displayname="First Name" show="true" primary-key="false" generator="assigned" key="firstName" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
