--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
@@ -15,55 +15,61 @@
                         <wm-liveform novalidate="false" errormessage="" title="Global Settings" iconclass="wi wi-settings" defaultmode="Edit" dataset="bind:Variables.Cx2GlobalSettingsData.dataSet" captionalign="left" captionposition="top" name="liveform2"
                         formdata="bind:Variables.DefaultData.firstRecord" class="panel-primary">
                             <wm-layoutgrid columns="1" name="layoutgrid3">
-                                <wm-gridrow name="gridrow13">
+                                <wm-gridrow name="gridrow13" padding="unset unset 3em unset">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn13">
-                                        <wm-form-field name="technologyFee" displayname="Technology Fee" show="true" primary-key="false" generator="assigned" key="technologyFee" type="float" step="0.01" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                                <wm-gridrow name="gridrow14">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn14">
-                                        <wm-form-field name="cxglobalSignature" displayname="CX Global Signature" show="true" primary-key="false" generator="assigned" key="cxglobalSignature" type="string" widget="text" maxchars="500" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="technologyFee" displayname="Technology Fee" show="true" primary-key="false" generator="assigned" key="technologyFee" type="float" step="0.01" widget="number" inputtype="number" placeholder="Enter value"
+                                        width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow15">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn15">
-                                        <wm-form-field name="cxphoneNumber" displayname="CX Phone Number" show="true" primary-key="false" generator="assigned" key="cxphoneNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="cxphoneNumber" displayname="CX Phone Number" show="true" primary-key="false" generator="assigned" key="cxphoneNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                        width="240px"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow22">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn22">
+                                        <wm-form-field name="cxemail" displayname="CX Email Address" show="true" primary-key="false" generator="assigned" key="cxemail" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" width="240px"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow21" padding="unset unset 3em unset">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn21">
+                                        <wm-form-field name="cxwebsite" displayname="CX Website" show="true" primary-key="false" generator="assigned" key="cxwebsite" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow16">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn16">
-                                        <wm-form-field name="cxaddress1" displayname="CX Address1" show="true" primary-key="false" generator="assigned" key="cxaddress1" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="cxaddress1" displayname="CX Address1" show="true" primary-key="false" generator="assigned" key="cxaddress1" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                        width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow17">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn17">
-                                        <wm-form-field name="cxaddress2" displayname="CX Address2" show="true" primary-key="false" generator="assigned" key="cxaddress2" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="cxaddress2" displayname="CX Address2" show="true" primary-key="false" generator="assigned" key="cxaddress2" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                        width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow18">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn18">
-                                        <wm-form-field name="cxcity" displayname="CX City" show="true" primary-key="false" generator="assigned" key="cxcity" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="cxcity" displayname="CX City" show="true" primary-key="false" generator="assigned" key="cxcity" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow19">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn19">
                                         <wm-form-field name="states" displayname="CX State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" dataset="bind:Variables.AllStates.dataSet" datafield="All Fields"
-                                        displayfield="stateName" placeholder="Select value"></wm-form-field>
+                                        displayfield="stateName" placeholder="Select value" orderby="stateName:asc" width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow20">
+                                <wm-gridrow name="gridrow20" padding="unset unset 3em unset">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn20">
-                                        <wm-form-field name="cxpostalCode" displayname="CX Postal Code" show="true" primary-key="false" generator="assigned" key="cxpostalCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="cxpostalCode" displayname="CX Postal Code" show="true" primary-key="false" generator="assigned" key="cxpostalCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                        width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow21">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn21">
-                                        <wm-form-field name="cxwebsite" displayname="CX Website" show="true" primary-key="false" generator="assigned" key="cxwebsite" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                                <wm-gridrow name="gridrow22">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn22">
-                                        <wm-form-field name="cxemail" displayname="CX Email" show="true" primary-key="false" generator="assigned" key="cxemail" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                <wm-gridrow name="gridrow14" padding="unset unset 3em unset">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn14">
+                                        <wm-form-field name="cxglobalSignature" displayname="CX Global Signature" show="true" primary-key="false" generator="assigned" key="cxglobalSignature" type="string" widget="textarea" maxchars="500" inputtype="text"
+                                        placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow14_1">
